# zapzapClone/src/main/java/com/bernardo/zapzapClone/model/chat/ChatResponse.java
@@ -3,6 +3,7 @@ package com.bernardo.zapzapClone.model.chat;
 import java.util.List;
 
 import com.bernardo.zapzapClone.model.message.Message;
+import com.bernardo.zapzapClone.model.user.UserResponse;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -24,5 +25,6 @@ public class ChatResponse {
     private String senderId;
     private String receiverId;
     private boolean isReciverOnline;
+    private List<UserResponse> users;
 
 }
