# zapzapclone-ui/src/app/api-services/models.ts
@@ -2,11 +2,11 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export type { Chat } from './models/chat';
-export type { ChatRequest } from './models/chat-request';
-export type { ChatResponse } from './models/chat-response';
-export type { Message } from './models/message';
-export type { MessageRequest } from './models/message-request';
-export type { MessageResponse } from './models/message-response';
-export type { User } from './models/user';
-export type { UserResponse } from './models/user-response';
+export { Chat } from './models/chat';
+export { ChatRequest } from './models/chat-request';
+export { ChatResponse } from './models/chat-response';
+export { Message } from './models/message';
+export { MessageRequest } from './models/message-request';
+export { MessageResponse } from './models/message-response';
+export { User } from './models/user';
+export { UserResponse } from './models/user-response';
