# zapzapclone-ui/src/app/api-services/models/chat-response.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 import { Message } from '../models/message';
+import { UserResponse } from '../models/user-response';
 export interface ChatResponse {
   chatName?: string;
   id?: string;
@@ -13,4 +14,5 @@ export interface ChatResponse {
   reciverOnline?: boolean;
   senderId?: string;
   unreadMessagesCount?: number;
+  users?: Array<UserResponse>;
 }
